# src/server/routes/ctpop.js
@@ -1,9 +1,13 @@
 import { Router } from 'express';
-import { getCellSummary, getSimilarCellSourcesReport, getSupportedOrgans } from '../../library/operations/ctpop.js';
+import { getCellSummary, getSimilarCellSourcesReport, getSupportedOrgans, getSupportedReferenceOrgans } from '../../library/operations/ctpop.js';
 
 const routes = Router()
   .get('/supported-organs', async function (_req, res) {
     const organs = await getSupportedOrgans();
+    res.json(organs);
+  })
+  .get('/supported-reference-organs', async function (_req, res) {
+    const organs = await getSupportedReferenceOrgans();
     res.json(organs);
   })
   .post('/rui-location-cell-summary', async function (req, res) {
@@ -12,8 +16,9 @@ const routes = Router()
     res.json(summary);
   })
   .post('/cell-summary-report', async function (req, res) {
-    const cellSummarySheet = req.body;
-    const report = await getSimilarCellSourcesReport(cellSummarySheet);
+    const cellSummarySheet = req.body.csvString;
+    const organ = req.body.organ;
+    const report = await getSimilarCellSourcesReport(cellSummarySheet, organ);
     res.json(report);
   });
 
