# src/service-worker/routes/ctpop.js
@@ -1,9 +1,13 @@
-import { getCellSummary, getSimilarCellSourcesReport, getSupportedOrgans } from '../../library/operations/ctpop.js';
+import { getCellSummary, getSimilarCellSourcesReport, getSupportedOrgans, getSupportedReferenceOrgans } from '../../library/operations/ctpop.js';
 
 function routes(app) {
   return app
-    .get('/supported-organs', async function (_req, res) {
+    .get('/api/ctpop/supported-organs', async function (_req, res) {
       const organs = await getSupportedOrgans();
+      res.json(organs);
+    })
+    .get('/api/ctpop/supported-reference-organs', async function (_req, res) {
+      const organs = await getSupportedReferenceOrgans();
       res.json(organs);
     })
     .post('/api/ctpop/rui-location-cell-summary', async function (req, res) {
